# mania-mesh-optimizer

./: .gitmodules  CMakeLists.txt  LICENSE
source/: longPathAware.manifest  main.cpp
